# mini-Cpanel

./: .gitignore  LICENSE  README.md
api/: minicpanel-api.service  pyproject.toml  reset_admin.py
api/app/: __init__.py  main.py
api/app/api/: auth.py  backups.py  databases.py  dependencies.py  docker.py  files.py  ingress.py  marketplace.py  notifications.py  projects.py  system.py  terminal.py  users.py
api/app/core/: __init__.py  backup.py  broadcaster.py  config.py  database.py  database_admin.py  deployment.py  files.py  ingress.py  marketplace.py  monitor.py  notifications.py  proxy_monitor.py  scheduler.py  security.py  ssl.py  system.py
api/app/core/setup/: __init__.py  autosetup.py
api/app/models/: __init__.py  base.py
api/app/schemas/: __init__.py  auth.py  backups.py  databases.py  docker.py  files.py  ingress.py  marketplace.py  notifications.py  projects.py  system.py  users.py
docs/: README.md  auth.md  backups_cron_system.md  databases.md  docker.md  files.md  ingress.md  notifications_marketplace_terminal_users.md  projects.md
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/components/: CommandPalette.tsx  Sidebar.tsx
web/app/components/Auth/: AuthForm.tsx
web/app/components/Backups/: BackupsTab.tsx
web/app/components/CronJobs/: CronJobsTab.tsx
web/app/components/Dashboard/: DashboardTab.tsx  Sparkline.tsx
web/app/components/Databases/: DatabasesTab.tsx
web/app/context/: AuthContext.tsx  NotificationContext.tsx
web/app/utils/: apiClient.ts  date.ts  helpers.ts  websocketClient.ts
(+12 files in other folders)
