[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpanel-lite-api"
version = "0.1.0"
description = "FastAPI backend agent for cPanel-Lite"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Dimas Luis Aditya" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "sqlalchemy>=2.0.31",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.4",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.3",
    "psutil>=5.9.8",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "httpx>=0.27.0",
]
postgres = [
    "psycopg2-binary>=2.9.9",
]
mysql = [
    "pymysql>=1.1.0",
]
